# koi_fish

./: .gitignore  README.md  ROADMAP  TODO  koi.toml  pyproject.toml
koi/: __main__.py  constants.py  logger.py  runner.py  utils.py
tests/: test_koi_fish.py
tests/resources/: koi.toml
