[project]
name = "koi-fish"
version = "0.1.3"
description = "CLI automation tool"
keywords = ["task automation", "cli tool", "command line runner"]
authors = [
  {name = "kaliv0", email = "kaloyan.ivanov88@gmail.com"},
]
urls = {repository = "https://github.com/kaliv0/koi_fish.git"}
license-files = ["LICENSE"]
readme = "README.md"

requires-python = ">=3.13"

dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.12.0",
]

[project.scripts]
koi = "koi.__main__:main"

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

# [tool.pdm.build]
# excludes = ["tests/"]

[tool.ruff]
fix = true
line-length = 100
