[project]
name = "koi-fish"
version = "1.0.0"
description = "CLI task runner & automation tool"
keywords = ["task automation", "cli tool", "command line runner", "task runner"]
authors = [
  {name = "kaliv0", email = "kaloyan.ivanov88@gmail.com"},
]
urls = {repository = "https://github.com/kaliv0/koi_fish.git"}
license-files = ["LICENSE"]
readme = "README.md"

requires-python = ">=3.11"

dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.12.0",
  "mypy>=1.16.1"
]

[project.scripts]
koi = "koi.__main__:main"

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[tool.ruff]
fix = true
line-length = 100
